--- a/index.css
+++ b/index.css
@@ -15,6 +15,7 @@ header {
     justify-content: space-between;
     align-items: center;
     position: relative;
+    width: 100%;
 }
 
 .left-nav {
@@ -67,11 +68,13 @@ header {
 
 .hamburger {
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
     height: 50px;
     width: 50px;
     position: absolute;
+    left: 98%;
 }
 
 .hamburger .bar {
